<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/mediaPlayerAct_layout_control"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ProgressBar
        android:id="@+id/mediaPlayerAct_progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/mediaPlayerAct_text_process"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="3:26/5:54"
        app:layout_constraintEnd_toEndOf="@+id/mediaPlayerAct_progressBar"
        app:layout_constraintTop_toBottomOf="@+id/mediaPlayerAct_progressBar" />

    <Button
        android:id="@+id/mediaPlayerAct_btn_previout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="50dp"
        android:text="@string/audio_previous"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mediaPlayerAct_progressBar" />

    <Button
        android:id="@+id/mediaPlayerAct_btn_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="24dp"
        android:text="@string/audio_next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mediaPlayerAct_progressBar" />

    <Button
        android:id="@+id/mediaPlayerAct_btn_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="8dp"
        android:text="@string/audio_start"
        app:layout_constraintEnd_toStartOf="@+id/mediaPlayerAct_btn_next"
        app:layout_constraintStart_toEndOf="@+id/mediaPlayerAct_btn_previout"
        app:layout_constraintTop_toBottomOf="@+id/mediaPlayerAct_progressBar" />

    <RadioGroup
        android:id="@+id/mediaPlayerAct_radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mediaPlayerAct_btn_start">

        <RadioButton
            android:id="@+id/mediaPlayerAct_rb_listOrder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/playMode_list_order" />

        <RadioButton
            android:id="@+id/mediaPlayerAct_rb_listLoop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/playMode_list_loop" />

        <RadioButton
            android:id="@+id/mediaPlayerAct_rb_signalLoop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/playMode_signal_loop" />

        <RadioButton
            android:id="@+id/mediaPlayerAct_rb_random"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/playMode_random" />
    </RadioGroup>


</androidx.constraintlayout.widget.ConstraintLayout>